--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==4.2.2
 django-parler==2.3
+django-parler-rest==2.2
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 coreapi==2.3.3
