--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ django-parler-rest==2.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 coreapi==2.3.3
+Pillow==10.0.1
+python-dotenv==1.0.0
+redis==5.0.1
+boto3==1.28.62
